Mittelstufe/notiz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notiz-ingress
  namespace: meine-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: notiz-app.local
    http:
      paths:
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: notiz-api
            port:
              number: 80
